--- a/Ecom.CartService/Properties/launchSettings.json
+++ b/Ecom.CartService/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Ecom.CartService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5005;http://localhost:5004",
       "environmentVariables": {
