Added Eureka and IdentityServer

--- a/Ecom.APIGateway/appsettings.json
+++ b/Ecom.APIGateway/appsettings.json
@@ -2,8 +2,34 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+
+  "Spring": {
+    "Application": {
+      "Name": "SERVICE.Ecom.APIGateway"
+    }
+  },
+  "Eureka": {
+    "Client": {
+      "ServiceUrl": {
+        "DefaultZone": "http://localhost:8761/eureka/"
+      },
+      "ValidateCertificates": false,
+      "ShouldRegisterWithEureka": true
+    },
+
+    "Instance": {
+      "NonSecurePort": 8001,
+      "HostName": "localhost",
+      "InstanceId": "Ecom.APIGateway",
+      "StatusPageUrlPath": "/swagger/index.html"
+    },
+
+    "AllowedHosts": "*"
+  }
+
 }
