--- a/Ecom.CartService/appsettings.json
+++ b/Ecom.CartService/appsettings.json
@@ -15,5 +15,27 @@
   "RabbitMQSettings": {
     "Host": "localhost"
   },
-  "AllowedHosts": "*"
+  "Spring": {
+    "Application": {
+      "Name": "SERVICE.Ecom.CartService"
+    }
+  },
+  "Eureka": {
+    "Client": {
+      "ServiceUrl": "http://localhost:8761/eureka/",
+      "ValidateCertificates": false,
+      "ShouldRegisterWithEureka": true
+    },
+
+    "Instance": {
+     // "port": 9004,
+      "NonSecurePort": 9007,
+      "HostName": "localhost",
+      "InstanceId": "Ecom.CartService,Port:9007",
+      "StatusPageUrlPath": "/swagger/index.html",
+      "HealthCheckUrlPath": "/api/values/healthcheck"
+      //"StatusPageUrlPath": "/api/values/status"
+    },
+    "AllowedHosts": "*"
+  }
 }
