--- a/Ecom.APIGateway/Ecom.APIGateway.csproj
+++ b/Ecom.APIGateway/Ecom.APIGateway.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="8.1.0" />
     <PackageReference Include="Ocelot" Version="22.0.1" />
+    <PackageReference Include="Ocelot.Provider.Eureka" Version="22.0.1" />
+    <PackageReference Include="Ocelot.Provider.Polly" Version="22.0.1" />
+    <PackageReference Include="Steeltoe.Discovery.Eureka" Version="3.2.6" />
   </ItemGroup>
 
 </Project>
