--- a/Ecom.CartService/Ecom.CartService.csproj
+++ b/Ecom.CartService/Ecom.CartService.csproj
@@ -10,9 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Ecom.Cart.Contracts" Version="1.0.1" />
-    <PackageReference Include="Ecom.Common" Version="1.0.1" />
+    <PackageReference Include="Ecom.Common" Version="1.0.4" />
     <PackageReference Include="Ecom.Inventory.Contracts" Version="1.0.3" />
     <PackageReference Include="Ecom.ProductService.Contracts" Version="1.0.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.26" />
