--- a/Ecom.Common/Ecom.Common.csproj
+++ b/Ecom.Common/Ecom.Common.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
+    <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="3.2.6" />
+    <PackageReference Include="Steeltoe.Discovery.Eureka" Version="3.2.6" />
   </ItemGroup>
 
 </Project>
