--- a/Ecom.Inventory/Ecom.Inventory.csproj
+++ b/Ecom.Inventory/Ecom.Inventory.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,8 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Ecom.Cart.Contracts" Version="1.0.1" />
-    <PackageReference Include="Ecom.Common" Version="1.0.1" />
+    <PackageReference Include="Ecom.Common" Version="1.0.4" />
     <PackageReference Include="Ecom.ProductService.Contracts" Version="1.0.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 </Project>
