--- a/Ecom.Inventory/Properties/launchSettings.json
+++ b/Ecom.Inventory/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Ecom.Inventory": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7261;http://localhost:5113",
       "environmentVariables": {
