--- a/Ecom.OrderService/Properties/launchSettings.json
+++ b/Ecom.OrderService/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Ecom.OrderService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7140;http://localhost:5204",
       "environmentVariables": {
