--- a/Ecom.ProductService/Ecom.ProductService.csproj
+++ b/Ecom.ProductService/Ecom.ProductService.csproj
@@ -13,7 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ecom.Common" Version="1.0.1" />
+    <PackageReference Include="Ecom.Common" Version="1.0.4" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
