--- a/Ecom.ProductService/appsettings.json
+++ b/Ecom.ProductService/appsettings.json
@@ -15,6 +15,29 @@
   "RabbitMQSettings": {
     "Host": "localhost"
   },
+  "Spring": {
+    "Application": {
+      "Name": "SERVICE.ECOMPRODUCTSERVICE"
+    }
+  },
+  "Eureka": {
+    "Client": {
+      "ServiceUrl": "http://localhost:8761/eureka/",
+      "ValidateCertificates": false,
+      "ShouldRegisterWithEureka": true
+    },
+
+    "Instance": {
+      "port": 9001,
+      "NonSecurePort": 9003,
+      "HostName": "localhost",
+      "InstanceId": "Ecom.ProductService,Port:9003",
+      "StatusPageUrlPath": "/swagger/index.html",
+      "HealthCheckUrlPath": "/api/values/healthcheck"
+      //"StatusPageUrlPath": "/api/values/status"
+    }
+  
+},
   //"MongoDbSettings": {
   //  "Host": "mongo",
   //  "Port": "27017"
