--- a/Ecom.IdentityServer/Server/Properties/launchSettings.json
+++ b/Ecom.IdentityServer/Server/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "https://localhost:5443;http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
