--- a/Ecom.APIGateway/appsettings.json
+++ b/Ecom.APIGateway/appsettings.json
@@ -15,16 +15,14 @@
   },
   "Eureka": {
     "Client": {
-      "ServiceUrl": {
-        "DefaultZone": "http://localhost:8761/eureka/"
-      },
+      "ServiceUrl": "http://eureka-server:8761/eureka/",
       "ValidateCertificates": false,
       "ShouldRegisterWithEureka": true
     },
 
     "Instance": {
-      "NonSecurePort": 8001,
-      "HostName": "localhost",
+      "NonSecurePort": 80,
+      "HostName": "ecom.apigateway",
       "InstanceId": "Ecom.APIGateway",
       "StatusPageUrlPath": "/swagger/index.html"
     },
