--- a/Ecom.OrderService/appsettings.json
+++ b/Ecom.OrderService/appsettings.json
@@ -9,11 +9,11 @@
     "ServiceName": "Order"
   },
   "MongoDbSettings": {
-    "Host": "localhost",
+    "Host": "mongo",
     "Port": "27017"
   },
   "RabbitMQSettings": {
-    "Host": "localhost"
+    "Host": "rabbitmq"
   },
   "Spring": {
     "Application": {
@@ -22,16 +22,16 @@
   },
   "Eureka": {
     "Client": {
-      "ServiceUrl": "http://localhost:8761/eureka/",
+      "ServiceUrl": "http://eureka-server:8761/eureka/",
       "ValidateCertificates": false,
       "ShouldRegisterWithEureka": true
     },
 
     "Instance": {
      // "port": 9005,
-      "NonSecurePort": 9008,
-      "HostName": "localhost",
-      "InstanceId": "Ecom.OrderService,Port:9008",
+      "NonSecurePort": 80,
+      "HostName": "orderservice",
+      "InstanceId": "Ecom.OrderService,Port:80",
       "StatusPageUrlPath": "/swagger/index.html",
       "HealthCheckUrlPath": "/api/values/healthcheck"
       //"StatusPageUrlPath": "/api/values/status"
