--- a/Ecom.ProductService/appsettings.json
+++ b/Ecom.ProductService/appsettings.json
@@ -8,13 +8,13 @@
   "ServiceSettings": {
     "ServiceName": "Catalog"
   },
-  "MongoDbSettings": {
+  /*"MongoDbSettings": {
     "Host": "localhost",
     "Port": "27017"
   },
   "RabbitMQSettings": {
     "Host": "localhost"
-  },
+  },*/
   "Spring": {
     "Application": {
       "Name": "SERVICE.ECOMPRODUCTSERVICE"
@@ -22,28 +22,28 @@
   },
   "Eureka": {
     "Client": {
-      "ServiceUrl": "http://localhost:8761/eureka/",
+      "ServiceUrl": "http://eureka-server:8761/eureka/",
       "ValidateCertificates": false,
       "ShouldRegisterWithEureka": true
     },
 
     "Instance": {
-      "port": 9001,
-      "NonSecurePort": 9003,
-      "HostName": "localhost",
-      "InstanceId": "Ecom.ProductService,Port:9003",
+      //"port": 9001,
+      "NonSecurePort": 80,
+      "HostName": "productservice",
+      "InstanceId": "Ecom.ProductService,Port:80",
       "StatusPageUrlPath": "/swagger/index.html",
       "HealthCheckUrlPath": "/api/values/healthcheck"
       //"StatusPageUrlPath": "/api/values/status"
     }
   
 },
-  //"MongoDbSettings": {
-  //  "Host": "mongo",
-  //  "Port": "27017"
-  //},
-  //"RabbitMQSettings": {
-  //  "Host": "rabbitmq"
-  //},
+  "MongoDbSettings": {
+    "Host": "mongo",
+    "Port": "27017"
+  },
+  "RabbitMQSettings": {
+    "Host": "rabbitmq"
+  },
   "AllowedHosts": "*"
 }
